# ShiroInk

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .trivyignore  404.html  AGENTS.md  CHANGELOG.md  CICD_DOCKER_ANALYSIS.md  COMMIT_GUIDE.md  Dockerfile  LICENSE.txt  PIPELINE_SUGGESTIONS.md  README.md  USABILITY_IMPLEMENTATION_CHECKLIST.md  USABILITY_PLAN.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml  test_pipeline.py
.github/: CONVENTIONAL_COMMITS.md  dependabot.yml
.github/workflows/: build-and-push-image.yml  docs.yml  release-gatekeeper.yml  release-please.yml  test.yml
architecture/error-handling/: index.html
architecture/overview/: index.html
architecture/pipeline-system/: index.html
architecture/progress-reporter/: index.html
cicd/analysis/: index.html
cicd/analysis-archived-2025-12-31/: index.html
cicd/implementation/: index.html
cicd/overview/: index.html
cicd/security-scanning/: index.html
cicd/testing/: index.html
contributing/conventional-commits/: index.html
contributing/development/: index.html
contributing/testing-guide/: index.html
docs/: index.md
docs/architecture/: error-handling.md  overview.md  pipeline-system.md  progress-reporter.md
search/: search_index.json
src/: __main__.py  __version__.py  cli.py  config.py  error_handler.py  error_messages.py  exceptions.py  file_processor.py  interactive_wizard.py  main.py  parameter_validator.py  progress_reporter.py
tests/: README.md  __init__.py  conftest.py
(+73 files in other folders)
